@@ -34,7 +34,15 @@ main(!IO) :-
 
     % With partial final byte.
     BM2 = bitmap.init(17),
-    do_bitmap_test(BM2, [-1, 0, 1, 2, 3], !IO).
+    do_bitmap_test(BM2, [-1, 0, 1, 2, 3], !IO),
+    io.nl(!IO),
+
+    BM3 = det_from_string("<24:FF00FF>"),
+    do_bitmap_test(BM3, [-1, 0, 1, 2, 3], !IO),
+    io.nl(!IO),
+
+    BM4 = det_from_string("<16:F00F>"),
+    do_bitmap_test(BM4, [-1, 0, 1, 2], !IO).
 
 :- pred do_bitmap_test(bitmap::in, list(byte_index)::in,
     io::di, io::uo) is cc_multi.
@@ -51,7 +59,16 @@ test_byte_lookup(BM, Index, !IO) :-
         Byte = BM ^ byte(Index)
     then
         io.write_int(Byte, !IO)
-    catch bitmap_error(Error) ->
-        io.write_string(Error, !IO)
+    catch bitmap_error(ByteError) ->
+        io.write_string(ByteError, !IO)
+    ),
+    io.nl(!IO),
+    io.format("get_uint(%d): ", [i(Index)], !IO),
+    ( try []
+        U8 = get_uint8(BM, Index)
+    then
+        io.write_uint8(U8, !IO)
+    catch bitmap_error(U8Error) ->
+        io.write_string(U8Error, !IO)
     ),
     io.nl(!IO).
